# lcoe-model

./: Bifacial_integration.py  Demo.py  Design_exp1.py  Design_exp_old.py  IVtest.py  IVtesting.py  MAIN.py  MAIN_MonteCarlo.py  MAINv2.py  OptimiseLayout.py  Phill_Dni.py  Plotting.py  README.md  Simulation_functions.py  Single_diode_generation.py  Storage_export_TimeSeries.py  SuncableCost.py  SuncableCostExample.py  benchmarking.py  benchmarking_mav.py  benchmarking_sat.py  bifacial_modelchain.py  design_exp.py  git-filter-repo.py  iteration_data_tables.csv  layout_optimiser.py  monte_carlo_npv_plot.py  montecarlo.py  montecarlo_v_report.py  montecarlo_v_report2.py  optimise_layout.py  parameter_extraction.py  parameters.csv  plotting.py  pyproject.toml  readme.md  scenario_costs_total_no_discount.csv  simulation_functions.py  singleaxis_tracking.py  sizing and layout.py  (+8 more)
AirtableLogs/: output 2021-08-19 10-43.xlsx  output 2021-08-20 11-45.xlsx  output 2021-08-20 11-55.xlsx  output 2021-08-20 11-57.xlsx  output 2021-08-20 12-01.xlsx  output 2021-08-22 15-42.xlsx  output 2021-08-22 19-06.xlsx  output 2021-08-22 19-09.xlsx  output 2021-08-22 19-14.xlsx  output 2021-08-22 21-49.xlsx  output 2021-08-22 21-52.xlsx  output 2021-08-22 22-15.xlsx  output 2021-08-23 12-16.xlsx  output 2021-08-23 14-04.xlsx  output 2021-08-23 14-22.xlsx  output 2021-08-23 20-20.xlsx  output 2021-08-23 21-26.xlsx  output 2021-08-23 21-49.xlsx  output 2021-08-23 21-53.xlsx  output 2021-08-23 22-07.xlsx  output 2021-08-23 22-23.xlsx  output 2021-08-23 22-25.xlsx  output 2021-08-23 22-30.xlsx  (+471 more)
(+535 files in other folders)
