[tool.poetry]
name = "sizing-costing-model"
version = "0.1.0"
description = ""
authors = ["Luke Marshall <luke.marshall@suncable.sg>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
airtable = "^0.4.8"
pydantic = "^1.8.2"
pytest = "^6.2.5"
PyQt5 = "^5.15.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
