[tool.poetry]
name = "sizing-costing-model"
version = "0.1.0"
description = ""
authors = ["Hoshang <z5255679@cse.unsw.edu.au>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
PyQt5 = "^5.15.6"
openpyxl = "^3.0.9"
pvfactors = "^1.5.2"
pvlib = "^0.9.1"
airtable-python-wrapper = "^0.15.3"
pc = "^0.0.3"
pvtools = "^1.1.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
